# liblcf

./: .editorconfig  .gitattributes  .gitignore  .travis.yml  AUTHORS  AUTHORS.md  CMakeLists.txt  CMakePresets.json  COPYING  Makefile.am  README  README.md  configure.ac  generate.py
.github/workflows/: stable-compilation.yml
bench/: readldb.cpp
builds/: Doxyfile  autoconf.config.h.in  cmake.config.h.in  config.h.in  liblcf-config.cmake.in  liblcf.pc.in  release-helper.sh  sources2buildsystem.pl
builds/autoconf/: liblcf-config-version.cmake.in  liblcf-config.cmake.in
builds/cmake/: CMakeLists.txt  CMakePresets.json.template  CMakePresetsBase.json  CMakePresetsUser.json  gen-cmake-presets.py  liblcf-config.cmake.in
builds/cmake/Modules/: FindExpat.cmake  FindICU.cmake  FindIconv.cmake  Findinih.cmake  MiscUtils.cmake
builds/codelite/: Readers.project  readers.project
builds/qt/: liblcf.pro
builds/vs2005/: Readers.vcproj
builds/vs2008/: Readers.vcproj
builds/vs2010/: PropertySheet.props  liblcf.vcxproj  liblcf.vcxproj.filters  readers.vcxproj  readers.vcxproj.filters
builds/vs2015/: PropertySheet.props  liblcf.vcxproj  liblcf.vcxproj.filters
csv/: enums.csv  fields.csv  flags.csv  setup.csv
generator/: README  README.md  generate.py
generator/csv/: constants.csv  enums.csv  enums_easyrpg.csv  fields.csv  fields_easyrpg.csv  flags.csv  flags_easyrpg.csv  functions.csv  setup.csv  structs.csv  structs_easyrpg.csv
generator/templates/: chunks.tmpl  constructor.tmpl  copyright.tmpl  declaration.tmpl  flag_fwd.tmpl  flag_instance.tmpl  flag_reader.tmpl  fwd.tmpl  fwd_header.tmpl  fwd_struct.tmpl  reader.tmpl  rpg_enums.tmpl  rpg_header.tmpl  rpg_source.tmpl
include/: Makefile.am  command_codes.h  data.h  event_reader.h  ini.h  inireader.h  ldb_chunks.h  ldb_reader.h  lmt_chunks.h  lmt_reader.h  lmu_chunks.h  lmu_reader.h  lsd_chunks.h  lsd_reader.h  move_reader.h  reader.h  reader_lcf.h  reader_options.h  reader_struct.h  reader_types.h  reader_util.h  reader_xml.h  rpg_actor.h  rpg_animation.h  rpg_animationcelldata.h  rpg_animationframe.h  rpg_animationtiming.h  rpg_attribute.h  rpg_battlecommand.h  rpg_battlecommands.h  rpg_battleranimation.h  rpg_battleranimationdata.h  rpg_battleranimationextension.h  rpg_chipset.h  rpg_class.h  rpg_commonevent.h  rpg_database.h  rpg_encounter.h  rpg_enemy.h  rpg_enemyaction.h  (+49 more)
mime/: liblcf.xml
python/: pylcf2xml.cpp  pylcf2xml.h
src/: Makefile.am  command_codes.h  data.cpp  data.h  dbarray.cpp  dbstring.cpp  dbstring_struct.cpp  encoder.cpp  encoder.h  enum.h  enum_set.h  enum_table.h  enum_tags.h  event_reader.cpp  flag_set.h  ini.cpp  ini.h  inireader.cpp  inireader.h  lcf_options.h  lcf_saveopt.h  ldb_actor.cpp  ldb_animation.cpp  ldb_animationcelldata.cpp  ldb_animationframe.cpp  ldb_animationtiming.cpp  ldb_attribute.cpp  ldb_battlecommand.cpp  ldb_battlecommands.cpp  ldb_battleranimation.cpp  ldb_battleranimationdata.cpp  ldb_battleranimationextension.cpp  ldb_chipset.cpp  ldb_class.cpp  ldb_commonevent.cpp  ldb_database.cpp  ldb_enemy.cpp  ldb_enemyaction.cpp  ldb_equipment.cpp  ldb_eventcommand.cpp  (+166 more)
src/lcf/: command_codes.h  compiler.h  context.h  data.h  dbarray.h  dbarrayalloc.h  dbbitarray.h  dbstring.h  encoder.h  enum_tags.h  flag_set.h  inireader.h  lcf_options.h  ldb_reader.h  lmt_reader.h  lmu_reader.h  log_handler.h  lsd_reader.h  reader_lcf.h  reader_util.h  reader_xml.h  saveopt.h  scope_guard.h  small_vector.h  span.h  string_view.h  writer_lcf.h  writer_xml.h
src/lcf/ldb/: reader.h
src/lcf/lmt/: reader.h
src/lcf/lmu/: reader.h
src/lcf/lsd/: reader.h
src/non_generated/: ldb_eventcommand.cpp  lmu_movecommand.cpp  lsd_reader.cpp
templates/: chunks.tmpl  constructor.tmpl  copyright.tmpl  declaration.tmpl  flag_reader.tmpl  python.tmpl  reader.tmpl
test/: time_stamp.cpp
tests/: Makefile.am  dbarray.cpp  dbbitarray.cpp  dbstring.cpp  encoder.cpp  enum.cpp  enum_set.cpp  enum_table.cpp  enum_tags.cpp  flag_set.cpp  ini.cpp  small_vector.cpp  span.cpp  string_view.cpp  test_main.cpp  time_stamp.cpp  zstring_view.cpp
tools/: lcf2xml.cpp  lcfstrings.cpp
